tests/m1/negative/private_type_import.ax
module private_type_import;

import m1lib.visibility;

fn main() -> i32 {
    let value: HiddenInt = 1;
    return value;
}
